--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 	<body>
 		<!-- 顶部 -->
 		<div class="header-user">
-			<img src="../徐玉龙个人博客/img/headph.jpg" alt="">
+			<img src="img/headph.jpg" alt="">
 			<div class="hu-text">
 				<h3>个人博客</h3>
 				<p>记录个人生活及那段岁月~</p>
@@ -17,19 +17,19 @@
 		<div class="nav">
 			<ul>
 				<li>
-					<a href="../徐玉龙个人博客/index.html">首页</a>
+					<a href="index.html">首页</a>
 				</li>
 				<li class="active">
-					<a href="../徐玉龙个人博客/about.html">专属vlog</a>
+					<a href="about.html">专属vlog</a>
 				</li>
 				<li>
-					<a href="../徐玉龙个人博客/like.html">致青春</a>
+					<a href="like.html">致青春</a>
 				</li>
 				<li>
-					<a href="../徐玉龙个人博客/work.html">人间烟火</a>
+					<a href="work.html">人间烟火</a>
 				</li>
 				<li>
-					<a href="../徐玉龙个人博客/ly.html">留言板</a>
+					<a href="ly.html">留言板</a>
 				</li>
 			</ul>
 		</div>
@@ -40,7 +40,7 @@
 			
 			
 			
-			<div><video src="../徐玉龙个人博客/img/vlog.mp4" controls style="width:100%;height:500px " poster="img/7.jpg"></video>
+			<div><video src="img/vlog.mp4" controls style="width:100%;height:500px " poster="img/7.jpg"></video>
 				
 			</div>
 		</div>
