--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<!-- 顶部 -->
 		<div class="header-user">
-			<img src="../徐玉龙个人博客/img/headph.jpg" alt="">
+			<img src="img/headph.jpg" alt="">
 			<div class="hu-text">
 				<h3>个人博客</h3>
 				<p>记录个人生活及那段岁月~</p>
@@ -17,25 +17,25 @@
 		<div class="nav">
 			<ul>
 				<li class="active">
-					<a href="../徐玉龙个人博客/index.html">首页</a>
+					<a href="index.html">首页</a>
 				</li>
 				<li>
-					<a href="../徐玉龙个人博客/about.html">专属vlog</a>
+					<a href="about.html">专属vlog</a>
 				</li>
 				<li>
-					<a href="../徐玉龙个人博客/like.html">致青春</a>
+					<a href="like.html">致青春</a>
 				</li>
 				<li>
-					<a href="../徐玉龙个人博客/work.html">人间烟火</a>
+					<a href="work.html">人间烟火</a>
 				</li>
 				<li>
-					<a href="../徐玉龙个人博客/ly.html">留言板</a>
+					<a href="ly.html">留言板</a>
 				</li>
 			</ul>
 		</div>
 		<div class="banner">
 			<div class="banner-left">
-				<img src="../徐玉龙个人博客/img/kj.jpg" >
+				<img src="img/kj.jpg" >
 			</div>
 			<div class="banner-right">
 				<p><b>姓名</b>：徐玉龙</p>
@@ -52,19 +52,19 @@
 			<ul>
 				<li>
 					<a href="">
-						<img src="../徐玉龙个人博客/img/js.jpg" alt="">
+						<img src="img/js.jpg" alt="">
 						<p>健身</p>
 					</a>
 				</li>
 				<li>
 					<a href="">
-						<img src="../徐玉龙个人博客/img/dlds.jpg" alt="">
+						<img src="img/dlds.jpg" alt="">
 						<p>篮球</p>
 					</a>
 				</li>
 				<li>
 					<a href="">
-						<img src="../徐玉龙个人博客/img/jm.jpg" alt="">
+						<img src="img/jm.jpg" alt="">
 						<p>游戏</p>
 					</a>
 				</li>
